fix class version comparison for preview class versions